# AI-Powered-Music-Recommendation-System

./: Music_Genre_App.py  README.md  clustered_df.csv  pyproject.toml  recommendation_Model.ipynb
